<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
   http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>EVLib</groupId>
   <artifactId>EVLib</artifactId>
   <version>1.0</version>
 
   <packaging>jar</packaging>
   <name>EVLib</name>
	
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
	
   <build>
	   <finalName>EVLib</finalName>
       <plugins>
           <plugin>
               <artifactId>maven-compiler-plugin</artifactId>
			   <version>3.6.1</version>
               <configuration>
                   <source>1.8</source>
                   <target>1.8</target>
               </configuration>
           </plugin>
       </plugins>
   </build>
</project>